# meta-agent

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  WRITEUP.md  plot_results.py  pyproject.toml
benchmarks/example/: benchmark.yaml
benchmarks/example/workspaces/fibonacci/: fib.py
benchmarks/tau3/: benchmark.yaml  benchmark_holdout.yaml  sdk_adapter.py  tau_vanilla.py
benchmarks/tau3/experiments/: benchmark_ablation_binary.yaml  benchmark_ablation_critique.yaml  benchmark_ablation_gold.yaml  benchmark_ablation_self.yaml  benchmark_search_gold.yaml  benchmark_search_judge.yaml  benchmark_smoke.yaml
configs/: bootstrap.py  hooks.py  vanilla.py
meta_agent/: benchmark.py  cli.py  eval_runner.py  outer_loop.py  run_context.py  task_runner.py
